--- a/eea/climateadapt/theme/climateadaptv2/src/less/reset.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/reset.less
@@ -17,11 +17,9 @@ time, mark, audio, video {
 	font-size: 100%;
 	margin: 0;
 	padding: 0;
-	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-
